// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CloudStorageForm should save on apply click for create 1`] = `
Object {
  "azureAccountKey": "key",
  "azureAccountName": "some name",
  "azureConnectionType": "azureFiles",
  "azureShareName": "share name",
  "azureStoragePath": "name",
  "connectionType": "azure",
}
`;

exports[`CloudStorageForm should save on apply click for edit 1`] = `
Object {
  "azureAccountKey": "key",
  "azureAccountName": "some name",
  "azureConnectionType": "azureBlob",
  "azureContainerName": "name",
  "azureStoragePath": "some/path",
  "connectionType": "azure",
  "id": "id",
}
`;

exports[`CloudStorageForm should show error on apply click 1`] = `
Object {
  "azureAccountKey": "key",
  "azureAccountName": "some name",
  "azureConnectionType": "azureBlob",
  "azureContainerName": "name",
  "azureStoragePath": "some/path",
  "connectionType": "azure",
  "id": "id",
}
`;
